# openepoc

./: .gitignore  LICENSE  README.md  pyproject.toml
csv-capture/: README.md  read_raw_eeg.py  requirements.txt  setup.sh
examples/: 01_record_csv.py  03_api_server.py  README.md  stream.py
examples/01_record_csv/: README.md
examples/02_stream_osc/: README.md  requirements.txt  stream.py
examples/03_api_server/: README.md  requirements.txt
examples/04_touchdesigner/: README.md  openepoc.toe  openepoc_chop.py  requirements.txt
src/eeg_exp/: __init__.py  cli.py  osc_outlet.py  reader.py  wizard.py
src/openepoc/: __init__.py  cli.py  diagnostics.py  filters.py  lsl_outlet.py  reader.py  wizard.py
