[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "eeg-exp"
version = "0.1.0"
description = "Live raw EEG capture from Emotiv EPOC 1.0 with LSL and OSC outlets"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "fbarretto" }]
dependencies = [
    "emokit",
    "hidapi",
    "pycryptodome",
    "pylsl",
    "python-osc",
]

[project.optional-dependencies]
analysis = ["mne", "numpy", "scipy"]

[project.scripts]
eeg-exp = "eeg_exp.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
